--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -276,7 +276,7 @@
             var name = $("TD", row).eq(0).html();
             if (confirm("Do you want to delete: " + name)) {
                 //Get the reference of the Table.
-                var table = $("#tblPurchaseOrder")[0];
+                var table = $("#tblPurchaseRequest")[0];
 
                 //Delete the Table row using it's Index.
                 table.deleteRow(row[0].rowIndex);
