--- a/Klinik.Web/Views/Reports/Top10Request.cshtml
+++ b/Klinik.Web/Views/Reports/Top10Request.cshtml
@@ -51,6 +51,13 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.WarehouseType</label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(model => model.WarehouseType,  (IEnumerable<SelectListItem>)ViewBag.Warehouses, new { @class = "form-control", @id = "ddlWarehouse" })
+                    @Html.ValidationMessageFor(model => model.WarehouseType)
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Category</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.SelectedCategory, Model.Categories, new { @class = "form-control", @id = "ddlCategory" })
