--- a/Klinik.Web/Views/Pharmacy/ListAllGivenMedicine.cshtml
+++ b/Klinik.Web/Views/Pharmacy/ListAllGivenMedicine.cshtml
@@ -13,7 +13,8 @@
 
 <button id="btnSave" class="btn btn-primary"><i class="fa fa-save"></i>@Klinik.Resources.UIMessages.Save</button>
 
-<br /><br />
+<br />
+<br />
 
 
 <section class="panel">
@@ -27,18 +28,22 @@
     </header>
 
     <div class="panel-body">
+        <div class="row" id="divNote">
+
+        </div>
+        <br />
         <div class="form-group">
             <div class="col-md-3">
                 <label class="control-label">Name :  @ViewBag.NamaPatient</label>
             </div>
-         
+
         </div>
 
         <div class="form-group">
             <div class="col-md-3">
                 <label class="control-label">Birthdate :   @ViewBag.Birthdate</label>
             </div>
-          
+
         </div>
         <div style="width:100%; margin:0 auto">
             <table id="tbListObatPasien" class="table table-striped table-bordered dt-responsive" cellspacing="0">
@@ -211,7 +216,7 @@
                 }
                 else {
                     var form_data = new FormData();
-                   
+                    var arr_notes = [];
                     form_data.append("idFrmMedDetail", JSON.stringify(rows_selected));
 
                     $.ajax({
@@ -223,9 +228,22 @@
                         async: "true",
                         success: function (result) {
                             if (result.Status == "True") {
-                                toastr.success(result.Message);
+                                arr_notes = result.Notes;
+                                if (arr_notes.length > 0) {
+                                    var html = "Some item below cannot be taken because of unavailable stock <ul>";
+                                    $.each(arr_notes, function (index, value) {
+                                        html += "<li>" + value + "</li>";
+                                    });
+
+                                    html += "</ul>";
+
+                                    $('#divNote').append(html);
+                                    $('#divNote').addClass("bg-warning text-dark")
+                                }
+                                if(result.Message!=null )
+                                    toastr.success(result.Message);
                             }
-                            else {
+                            else if(result.Status == "False") {
                                 toastr.error(result.Message);
                             }
                         },
