--- a/Klinik.Web/Views/Patient/CreateOrEditPatient.cshtml
+++ b/Klinik.Web/Views/Patient/CreateOrEditPatient.cshtml
@@ -12,169 +12,181 @@
 			</div>
 			<h5 class="panel-title">Form @ViewBag.ActionType Patient</h5>
 		</header>
-		<div class="panel-body">
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Employee</label>
-				<div class="col-md-4">
-					@Html.HiddenFor(x => x.Id)
-					@Html.HiddenFor(x => x.IsFromRegistration)
-					@Html.DropDownListFor(p => p.EmployeeID, (IEnumerable<SelectListItem>)ViewBag.EmpReff, new { @class = "form-control", @id = "ddlEmpReff" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.FamilyRelationship</label>
-				<div class="col-md-4">
-					@Html.DropDownListFor(p => p.familyRelationshipID, (IEnumerable<SelectListItem>)ViewBag.Relation, new { @class = "form-control", @id = "ddlRelation" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">
-					@Klinik.Resources.UIMessages.Name
-				</label>
-				<div class="col-md-4">
-					@Html.TextBoxFor(x => x.Name, new { @class = "form-control", @id = "tbName" })
-					@Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
-				</div>
-			</div>
+        <div class="panel-body">
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Employee</label>
+                <div class="col-md-4">
+                    @Html.HiddenFor(x => x.Id)
+                    @Html.HiddenFor(x => x.IsFromRegistration)
+                    @Html.DropDownListFor(p => p.EmployeeID, (IEnumerable<SelectListItem>)ViewBag.EmpReff, new { @class = "form-control", @id = "ddlEmpReff" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.FamilyRelationship</label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(p => p.familyRelationshipID, (IEnumerable<SelectListItem>)ViewBag.Relation, new { @class = "form-control", @id = "ddlRelation" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.Name
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.Name, new { @class = "form-control", @id = "tbName" })
+                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">
-					@Klinik.Resources.UIMessages.Gender
-				</label>
-				<div class="col-md-4">
-					@Html.RadioButtonFor(m => m.Gender, "M", new { @class = "form-check-input", @id = "rdbMale" }) @Klinik.Resources.UIMessages.Male
-					&nbsp;
-					@Html.RadioButtonFor(m => m.Gender, "F", new { @class = "form-check-input", @id = "rdbFeMale", @text = "Female" }) @Klinik.Resources.UIMessages.Female
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">
-					@Klinik.Resources.UIMessages.MaritalStatus
-				</label>
-				<div class="col-md-4">
-					@Html.DropDownListFor(p => p.MaritalStatus, (IEnumerable<SelectListItem>)ViewBag.Marital, new { @class = "form-control", @id = "ddlMarital" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">
-					@Klinik.Resources.UIMessages.Birthdate
-				</label>
-				<div class="col-md-4">
-					@Html.TextBoxFor(x => x.BirthDateStr, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbBirthDate" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">
-					@Klinik.Resources.UIMessages.KTPNumber
-				</label>
-				<div class="col-md-4">
-					@Html.TextBoxFor(x => x.KTPNumber, new { @class = "form-control", @id = "tbKTP" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">
-					@Klinik.Resources.UIMessages.Address
-				</label>
-				<div class="col-md-4">
-					@Html.TextAreaFor(x => x.Address, new { @class = "form-control", @id = "tbAddress" })
-					@Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">
-					@Klinik.Resources.UIMessages.City
-				</label>
-				<div class="col-md-4">
-					@Html.DropDownListFor(p => p.CityID, (IEnumerable<SelectListItem>)ViewBag.City, new { @class = "form-control", @id = "ddlCity" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Type</label>
-				<div class="col-md-4">
-					@Html.DropDownListFor(p => p.Type, (IEnumerable<SelectListItem>)ViewBag.PatientType, new { @class = "form-control", @id = "ddlPatientType" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.BPJSNo</label>
-				<div class="col-md-4">
-					@Html.TextBoxFor(x => x.BPJSNumber, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbBPJS" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.BloodType</label>
-				<div class="col-md-4">
-					@Html.TextBoxFor(x => x.BloodType, new { @class = "form-control", @id = "tbBlood" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">
-					@Klinik.Resources.UIMessages.CurrentAddress
-				</label>
-				<div class="col-md-4">
-					@Html.TextAreaFor(x => x.PatientClinic.TempAddress, new { @class = "form-control", @id = "tbTempAddress" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">
-					@Klinik.Resources.UIMessages.City
-				</label>
-				<div class="col-md-4">
-					@Html.DropDownListFor(p => p.PatientClinic.TempCityId, (IEnumerable<SelectListItem>)ViewBag.City, new { @class = "form-control", @id = "ddlTempCity" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ReffPerson</label>
-				<div class="col-md-4">
-					@Html.TextBoxFor(x => x.PatientClinic.RefferencePerson, new { @class = "form-control", @id = "tbReffPerson" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ReffPersonNo</label>
-				<div class="col-md-4">
-					@Html.TextBoxFor(x => x.PatientClinic.RefferenceNumber, new { @class = "form-control", @id = "tbReffNo" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ReffRelation</label>
-				<div class="col-md-4">
-					@Html.DropDownListFor(p => p.PatientClinic.RefferenceRelation, (IEnumerable<SelectListItem>)ViewBag.ReffRelation, new { @class = "form-control", @id = "ddlReffRelation" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.OldMRNumber</label>
-				<div class="col-md-4">
-					@Html.TextBoxFor(x => x.PatientClinic.OldMRNumber, new { @class = "form-control", @id = "tbOldMRNo" })
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.UploadedPhoto</label>
-				<div class="col-md-10">
-					@Html.DisplayFor(x => x.Photo.ActualName, new { @class = "form-control" })
-				</div>
-			</div>
-			<div class="form-group">
-				@Html.Label("Photo", new { @class = "control-label col-md-2" })
-				<div class="col-md-10">
-					@Html.TextBoxFor(m => m.file, new { @type = "file", @Id = "PhotoUpload", @name = "PhotoUpload", @onchange = "previewImage(event)" })
-				</div>
-			</div>
-			<div class="form-group">
-				@Html.Label("Existing photo (if any)", new { @class = "control-label col-md-2" })
-				<div class="col-md-10">
-					@if (Model != null && Model.Photo != null)
-					{
-						<img src="@Url.Content("~/fileDoc/Photo/"+ @Model.Photo.ActualName)"
-							 alt="" id="ImageBox"
-							 class="img-thumbnail" width="280" />
-					}
-					else
-					{
-						<img alt="" id="ImageBox"
-							 class="img-thumbnail" width="280" />
-					}
-				</div>
-			</div>
-		</div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.Gender
+                </label>
+                <div class="col-md-4">
+                    @Html.RadioButtonFor(m => m.Gender, "M", new { @class = "form-check-input", @id = "rdbMale" }) @Klinik.Resources.UIMessages.Male
+                    &nbsp;
+                    @Html.RadioButtonFor(m => m.Gender, "F", new { @class = "form-check-input", @id = "rdbFeMale", @text = "Female" }) @Klinik.Resources.UIMessages.Female
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.MaritalStatus
+                </label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(p => p.MaritalStatus, (IEnumerable<SelectListItem>)ViewBag.Marital, new { @class = "form-control", @id = "ddlMarital" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.Birthplace
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.Birthplace, new { @class = "form-control", @id = "tbBirthplace" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.Birthdate
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.BirthDateStr, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbBirthDate" })
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.KTPNumber
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.KTPNumber, new { @class = "form-control", @id = "tbKTP" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.Address
+                </label>
+                <div class="col-md-4">
+                    @Html.TextAreaFor(x => x.Address, new { @class = "form-control", @id = "tbAddress" })
+                    @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.City
+                </label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(p => p.CityID, (IEnumerable<SelectListItem>)ViewBag.City, new { @class = "form-control", @id = "ddlCity" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Type</label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(p => p.Type, (IEnumerable<SelectListItem>)ViewBag.PatientType, new { @class = "form-control", @id = "ddlPatientType" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.BPJSNo</label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.BPJSNumber, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbBPJS" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.BloodType</label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.BloodType, new { @class = "form-control", @id = "tbBlood" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.CurrentAddress
+                </label>
+                <div class="col-md-4">
+                    @Html.TextAreaFor(x => x.PatientClinic.TempAddress, new { @class = "form-control", @id = "tbTempAddress" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.City
+                </label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(p => p.PatientClinic.TempCityId, (IEnumerable<SelectListItem>)ViewBag.City, new { @class = "form-control", @id = "ddlTempCity" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ReffPerson</label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.PatientClinic.RefferencePerson, new { @class = "form-control", @id = "tbReffPerson" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ReffPersonNo</label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.PatientClinic.RefferenceNumber, new { @class = "form-control", @id = "tbReffNo" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ReffRelation</label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(p => p.PatientClinic.RefferenceRelation, (IEnumerable<SelectListItem>)ViewBag.ReffRelation, new { @class = "form-control", @id = "ddlReffRelation" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.OldMRNumber</label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.PatientClinic.OldMRNumber, new { @class = "form-control", @id = "tbOldMRNo" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.UploadedPhoto</label>
+                <div class="col-md-10">
+                    @Html.DisplayFor(x => x.Photo.ActualName, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.Label("Photo", new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.file, new { @type = "file", @Id = "PhotoUpload", @name = "PhotoUpload", @onchange = "previewImage(event)" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.Label("Existing photo (if any)", new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @if (Model != null && Model.Photo != null)
+                    {
+                        <img src="@Url.Content("~/fileDoc/Photo/"+ @Model.Photo.ActualName)"
+                             alt="" id="ImageBox"
+                             class="img-thumbnail" width="280" />
+                    }
+                    else
+                    {
+                        <img alt="" id="ImageBox"
+                             class="img-thumbnail" width="280" />
+                    }
+                </div>
+            </div>
+        </div>
 		<div class="panel-footer">
 			<button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
 			<button type="reset" id="btnreset" class="btn btn-default" onclick="GoBack(@Model.IsFromRegistration)">@Klinik.Resources.UIMessages.Back</button>
